--- a/website/html/events.html
+++ b/website/html/events.html
@@ -1,13 +1,13 @@
 {{ define "events_page" }}
-<div class="w-[80%] mx-auto mt-10">
-	<header class="w-full flex items-center justify-between text-gray-800">
+<div class="w-full mx-auto mt-10">
+	<header class="w-full px-4 flex items-center justify-between text-gray-800">
 		<h1 class="font-semibold text-2xl">Events</h1>
 		<a href="{{ .NextUrl }}" class="">
 			Next
 		</a>
 	</header>
 
-	<div class="w-full mt-10 overflow-x-auto">
+	<div class="w-full px-4 mt-10 overflow-x-auto">
 		<ul class="w-fit min-w-full flex flex-col gap-y-4 relative">
 			<!-- header -->
 			<!-- TODO: sticky -->
