--- a/website/html/events.html
+++ b/website/html/events.html
@@ -2,7 +2,7 @@
 <div class="w-full mx-auto mt-10">
 	<header class="w-full px-4 flex items-center justify-between text-gray-800">
 		<h1 class="font-semibold text-2xl">Events</h1>
-		<a href="{{ .NextUrl }}" class="">
+		<a href="{{ .NextUrl }}" id="link">
 			Next
 		</a>
 	</header>
@@ -43,7 +43,8 @@
 							<a
 								href="{{ .ExplorerUrl }}"
 								target="_blank"
-								class="text-gray-800"
+								class="text-gray-800 decoration-gray-400"
+                                id="link"
 							>{{ .TxId }}</a>
 							<span class="text-sm text-gray-700">{{ formatTime .Timestamp }}</span>
 						</div>
@@ -207,7 +208,7 @@
                             {{ template "event_token_img" .ImgUrl }}
                             {{ upper .Token }}
                         </span>
-                        <span id="hoverable">
+                        <span id="hoverable" class="w-fit">
                             {{ if .LocalZero }}
                                 -
                             {{ else }}
@@ -217,7 +218,7 @@
                                 </div>
                             {{ end }}
                         </span>
-                        <span id="hoverable">
+                        <span id="hoverable" class="w-fit">
                             {{ if .ExternalZero }}
                                 -
                             {{ else }}
@@ -259,7 +260,7 @@
 	<div class="w-full text-sm h-[1em]">
 		<span class="text-gray-500 font-medium">
 			{{ if . }}
-				{{ .Wallet }}
+                {{ .Wallet }}
 			{{ end }}
 		</span>
 	</div>
@@ -318,7 +319,9 @@
     >
         {{ .Amount }} {{ upper .Symbol }}
         <div id="floating" class="flex-col">
-            <span class="text-gray-500 text-xs font-semibold">Long amount</span>
+            <span class="text-gray-500 text-xs font-semibold">Account</span>
+            {{ shorten .Account 4 4 }}
+            <span class="text-gray-500 text-xs font-semibold">Additional info</span>
             {{ .LongAmount }} {{ upper .Symbol }}
         </div>
     </span>
