close account, some drift stuff

--- a/website/html/events.html
+++ b/website/html/events.html
@@ -380,7 +380,7 @@
 					{{ template "event_token_amount_component" . }}
 				{{ end }}
 			{{ else }}
-				<div class="mt-1">-</div>
+				<div class="text-sm">-</div>
 			{{ end }}
 		</div>
 
@@ -391,7 +391,7 @@
 					{{ template "event_fiat_amount_component" . }}
 				{{ end }}
 			{{ else }}
-				<div class="mt-1">-</div>
+				<div class="text-sm">-</div>
 			{{ end }}
 		</div>
 	</div>
