--- a/website/html/events.html
+++ b/website/html/events.html
@@ -197,9 +197,8 @@
 
 {{ define "events_network_component" }}
 <div class="
-	w-5 h-5 p-0.5 absolute top-0 left-0 -translate-y-1/3 -translate-x-1/3
-	rounded-full bg-gray-100 border border-gray-200
-	overflow-hidden
+	w-6 h-6 p-0.5 absolute top-0 left-0 -translate-y-1/3 -translate-x-1/3
+	bg-gray-100 border border-gray-200 rounded-full
 ">
 	<img 
 		src="{{ . }}" 
@@ -212,12 +211,21 @@
     <div class="
         w-full px-4 py-2 grid grid-cols-[300px_repeat(2,minmax(350px,1fr))_150px] relative
     ">
-        {{ template "events_network_component" .NetworkImgUrl }}
+        {{ if not .Native }}
+            {{ template "events_network_component" .NetworkImgUrl }}
+        {{ end }}
 
         <!-- App img, network img, event type, onchain method -->
         <div class="flex">
-            <div class="w-10 h-10 rounded-full bg-gray-200">
-                
+            <div class="
+                w-10 h-10 p-1 flex items-center justify-center 
+                rounded-full bg-gray-100 border border-gray-200 overflow-hidden
+            ">
+                {{ if .AppImgUrl }}
+                    <img src="{{ .AppImgUrl }}" class="w-full aspect-square" />
+                {{ else }}
+                    <span class="text-gray-400 text-xl font-semibold">?</span>
+                {{ end }}
             </div>
 
             <div class="flex flex-col ml-4">
@@ -400,11 +408,10 @@
 
 {{ define "event_token_img" }}
 <div class="
-    w-5 h-5 
-    rounded-full overflow-hidden
+    w-5 h-5 rounded-sm overflow-hidden
 ">
     {{ if . }}
-        <img src="{{ . }}" class="w-5 h-5 rounded-full" />
+        <img src="{{ . }}" class="w-5 h-5" />
     {{ else }}
         <div class="
             w-full h-full flex items-center justify-center
