--- a/website/html/events.html
+++ b/website/html/events.html
@@ -1,118 +1,57 @@
 {{ define "events_page" }}
-<script defer src="/static/js/events.js"></script>
-<div class="w-full relative">
-    <div class="
-        w-[3rem] min-h-screen fixed py-10 px-2 flex flex-col items-center 
-        border-r border-gray-200 z-50
-    ">
-        <p class="text-gray-800 text-2xl font-semibold">T</p> 
-
-        {{ $iconBtn := "w-full aspect-square border border-gray-200 rounded-md p-1 hover:bg-gray-200 cursor-pointer" }}
-        <div class="flex flex-col gap-2 w-full mt-10 text-gray-600">
-            <a 
-                class="{{ $iconBtn }}"
-                href="/wallets"
-            >
-                <svg class="w-full h-full p-0.25" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
-                  <path stroke-linecap="round" stroke-linejoin="round" d="M21 12a2.25 2.25 0 0 0-2.25-2.25H15a3 3 0 1 1-6 0H5.25A2.25 2.25 0 0 0 3 12m18 0v6a2.25 2.25 0 0 1-2.25 2.25H5.25A2.25 2.25 0 0 1 3 18v-6m18 0V9M3 12V9m18 0a2.25 2.25 0 0 0-2.25-2.25H5.25A2.25 2.25 0 0 0 3 9m18 0V6a2.25 2.25 0 0 0-2.25-2.25H5.25A2.25 2.25 0 0 0 3 6v3" />
-                </svg>
-            </a>
-            <a 
-                class="{{ $iconBtn }}"
-                href="/events"
-            >
-                <svg class="w-full h-full p-0.25" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
-                  <path stroke-linecap="round" stroke-linejoin="round" d="M6.429 9.75 2.25 12l4.179 2.25m0-4.5 5.571 3 5.571-3m-11.142 0L2.25 7.5 12 2.25l9.75 5.25-4.179 2.25m0 0L21.75 12l-4.179 2.25m0 0 4.179 2.25L12 21.75 2.25 16.5l4.179-2.25m11.142 0-5.571 3-5.571-3" />
-                </svg>
-            </a>
-
-            <div class="w-[calc(100%+1rem)] -mx-2 border-t border-gray-200"></div>
-
-            <button class="{{ $iconBtn }} hoverable" id="btn-refetch">
-                <svg class="w-full h-full p-0.25" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
-                  <path stroke-linecap="round" stroke-linejoin="round" d="M3 16.5v2.25A2.25 2.25 0 0 0 5.25 21h13.5A2.25 2.25 0 0 0 21 18.75V16.5M16.5 12 12 16.5m0 0L7.5 12m4.5 4.5V3" />
-                </svg>
-                
-                <div class="floating-right">
-                    Refetch
-                </div>
-            </button>
-
-            <div class="{{ $iconBtn }} hoverable" id="btn-parse-txs">
-                <svg class="w-full h-full p-0.25" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
-                  <path stroke-linecap="round" stroke-linejoin="round" d="M16.023 9.348h4.992v-.001M2.985 19.644v-4.992m0 0h4.992m-4.993 0 3.181 3.183a8.25 8.25 0 0 0 13.803-3.7M4.031 9.865a8.25 8.25 0 0 1 13.803-3.7l3.181 3.182m0-4.991v4.99" />
-                </svg>
-
-                <span class="floating-right">
-                    Parse transactions and events
-                </span>
-            </div>
-
-            <button class="{{ $iconBtn }} hoverable" id="btn-parse-events">
-                <svg class="w-full h-full p-0.25" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
-                  <path stroke-linecap="round" stroke-linejoin="round" d="M16.023 9.348h4.992v-.001M2.985 19.644v-4.992m0 0h4.992m-4.993 0 3.181 3.183a8.25 8.25 0 0 0 13.803-3.7M4.031 9.865a8.25 8.25 0 0 1 13.803-3.7l3.181 3.182m0-4.991v4.99" />
-                </svg>
-
-                <span class="floating-right">
-                    Parse events
-                </span>
-            </button>
-        </div>
-    </div>
-
-    <div class="w-[calc(100%-3rem)] pt-10 ml-[3rem]">
-        <header class="w-full px-4 flex items-center justify-between text-gray-800">
-            <h1 class="font-semibold text-2xl">Events</h1>
-            <div class="flex items-center gap-8">
-                {{ template "events_progress_indicator" .ProgressIndicator }}
-                <a href="{{ .NextUrl }}" class="text-gray-800 link">
-                    Next
-                </a>
-            </div>
-        </header>
-
-        <!-- TODO -->
-        <div id="table-nav-floating" class="
-            py-2 px-4 fixed bottom-2 right-4 flex items-center gap-8
-            bg-white border border-gray-200 rounded-lg z-1000 hidden
-        ">
+<script defer src="/static/js/events.js" type="module"></script>
+<div class="w-[calc(100%-3rem)] pt-10 ml-[3rem]">
+    <header class="w-full px-4 flex items-center justify-between text-gray-800">
+        <h1 class="font-semibold text-2xl">Events</h1>
+        <div class="flex items-center gap-8">
             {{ template "events_progress_indicator" .ProgressIndicator }}
             <a href="{{ .NextUrl }}" class="text-gray-800 link">
                 Next
             </a>
         </div>
+    </header>
 
-        <div id="table-container" class="w-full px-4 mt-10 overflow-x-auto">
-            <div class="w-fit min-w-full relative">
-                <!-- header -->
-                <div id="table-header-placeholder" class="w-full h-10"></div>
-                <div id="table-header" class="
-                    w-full h-10 pl-4 grid grid-cols-[150px_1fr] items-center
-                    absolute top-0 z-1000
-                    bg-gray-50 border border-gray-200 rounded-lg text-gray-800
-                ">
-                    <span>Date</span>
-                    <div class="w-full px-4 grid grid-cols-[300px_repeat(2,minmax(350px,1fr))_150px]">
-                        <span>App</span>
-                        <div class="flex">
-                            <span class="w-1/2">Outgoing</span>
-                            <span>Disposal</span>
-                        </div>
-                        <div class="flex">
-                            <span class="w-1/2">Incoming</span>
-                            <span>Acquisition</span>
-                        </div>
-                        <span>Profit</span>
+    <!-- TODO -->
+    <div id="table-nav-floating" class="
+        py-2 px-4 fixed bottom-2 right-4 flex items-center gap-8
+        bg-white border border-gray-200 rounded-lg z-1000 hidden
+    ">
+        {{ template "events_progress_indicator" .ProgressIndicator }}
+        <a href="{{ .NextUrl }}" class="text-gray-800 link">
+            Next
+        </a>
+    </div>
+
+    <div id="table-container" class="w-full px-4 mt-10 overflow-x-auto">
+        <div class="w-fit min-w-full relative">
+            <!-- header -->
+            <div id="table-header-placeholder" class="w-full h-10"></div>
+            <div id="table-header" class="
+                w-full h-10 pl-4 grid grid-cols-[150px_1fr] items-center
+                absolute top-0 z-1000
+                bg-gray-50 border border-gray-200 rounded-lg text-gray-800
+            ">
+                <span>Date</span>
+                <div class="w-full px-4 grid grid-cols-[300px_repeat(2,minmax(350px,1fr))_150px]">
+                    <span>App</span>
+                    <div class="flex">
+                        <span class="w-1/2">Outgoing</span>
+                        <span>Disposal</span>
                     </div>
+                    <div class="flex">
+                        <span class="w-1/2">Incoming</span>
+                        <span>Acquisition</span>
+                    </div>
+                    <span>Profit</span>
                 </div>
-
-                <ul 
-                    id="events-table"
-                    class="w-fit min-w-full mt-4 flex flex-col gap-y-4"
-                >
-                    {{ template "events_rows" .Rows }}
-                </ul>
             </div>
+
+            <ul 
+                id="events-table"
+                class="w-fit min-w-full mt-4 flex flex-col gap-y-4"
+            >
+                {{ template "events_rows" .Rows }}
+            </ul>
         </div>
     </div>
 </div>
@@ -289,10 +228,37 @@
         errors
     </span>
 
-    {{ if .MissingAccounts | or .BalanceMismatches | or .DataMismatches }}
+    {{ if not .Empty }}
+        {{ $groupHeader := "-mx-2 px-2 py-0.5 text-sm text-gray-800 bg-red-100 rounded-lg" }}
         <ul class="mt-2 flex flex-col gap-3">
+            {{ if .MissingSwapTransfers }}
+                <li class="{{ $groupHeader }}">
+                    Missing accounts
+                </li>
+
+                {{ range .MissingSwapTransfers }}
+                    <li class="text-sm text-gray-700 flex items-center justify-between gap-2">
+                        <span class="hoverable flex items-center justify-center gap-2">
+                            <span class="
+                                size-5 text-sm rounded-full text-orange-500 bg-orange-200/40
+                                flex items-center justify-center
+                                ">i</span>
+                            Missing transfers for swap
+
+                            <div class="floating w-[300px]! text-wrap!">
+                                This instruction was supposed to be a swap but incoming or
+                                outgoing transfer(s) are missing. The reason is most likely
+                                that some token account is not being parsed properly prior to
+                                this instruction.
+                            </div>
+                        </span>
+                        <span class="flex-shrink-0">Ix: {{ . }}</span>
+                    </li>
+                {{ end }}
+            {{ end }}
+
             {{ if .MissingAccounts }}
-                <li class="-mx-2 px-2 py-0.5 text-sm text-gray-800 bg-red-100 rounded-lg">
+                <li class="{{ $groupHeader }}">
                     Missing accounts
                 </li>
 
@@ -305,12 +271,8 @@
             {{ end }}
 
             {{ if .BalanceMismatches }}
-                <li class="
-                    -mx-2 px-2 py-0.5 grid grid-cols-[20%_20%_2fr_1fr_1fr]
-                    text-sm text-gray-800 bg-red-100 rounded-lg
-                ">
+                <li class="{{ $groupHeader }} grid grid-cols-[20%_20%_2fr_1fr_1fr]">
                     <span class="col-[1/4]">Balance mismatches</span>
-                    
                     <span class="text-gray-600">Local</span>
                     <span class="text-gray-600">External</span>
                 </li>
@@ -320,7 +282,7 @@
                         <span>{{ shorten .Wallet 4 4 }}</span>
                         <span>{{ shorten .Account 4 4 }}</span>
                         <span class="flex gap-2 items-center">
-                            {{ template "event_token_img" .ImgUrl }}
+                            {{ template "event_token_img" .ImgData }}
                             {{ upper .Token }}
                         </span>
                         <span class="w-fit hoverable">
@@ -348,7 +310,7 @@
             {{ end }}
 
             {{ if .DataMismatches }}
-                <li class="-mx-2 px-2 py-0.5 text-sm text-gray-800 bg-red-100 rounded-lg">
+                <li class="{{ $groupHeader }}">
                     Data mismatches
                 </li>
 
@@ -407,11 +369,14 @@
 {{ end }}
 
 {{ define "event_token_img" }}
-<div class="
-    w-5 h-5 rounded-sm overflow-hidden
-">
-    {{ if . }}
-        <img src="{{ . }}" class="w-5 h-5" />
+<div 
+    class="w-5 h-5 rounded-sm overflow-hidden"
+    {{ if (not .ImgUrl) | and .CoingeckoId }}
+    data-coingecko-id="{{ .CoingeckoId }}"
+    {{ end }}
+>
+    {{ if .ImgUrl }}
+        <img src="{{ .ImgUrl }}" class="w-5 h-5" />
     {{ else }}
         <div class="
             w-full h-full flex items-center justify-center
@@ -425,7 +390,7 @@
 
 {{ define "event_token_amount_component" }}
 <div class="w-fit flex items-center gap-2 relative">
-    {{ template "event_token_img" .ImgUrl }}
+    {{ template "event_token_img" .ImgData }}
 
 	<span
         class="text-gray-800 text-sm hoverable"
