--- a/website/html/events.html
+++ b/website/html/events.html
@@ -1,6 +1,6 @@
 {{ define "events_page" }}
 <script defer src="/static/js/events.js" type="module"></script>
-<div class="w-[calc(100%-3rem)] pt-10 ml-[3rem]">
+<div class="w-[calc(100%-3rem)] pt-10 pb-20 ml-[3rem]">
     <header class="w-full px-4 flex items-center justify-between text-gray-800">
         <h1 class="font-semibold text-2xl">Events</h1>
         <div class="flex items-center gap-8">
@@ -9,21 +9,24 @@
                 Next
             </a>
         </div>
+
+        <div 
+            id="table-nav-floating"
+            class="
+                opacity-0 transition-opacity pointer-events-none
+                fixed bottom-4 right-4 flex items-center gap-8 py-2 px-4
+                bg-white border border-gray-200 rounded-lg shadow-xs z-100
+            "
+        >
+            {{ template "events_progress_indicator" .ProgressIndicator }}
+            <a href="{{ .NextUrl }}" class="text-gray-800 link">
+                Next
+            </a>
+        </div>
     </header>
 
-    <!-- TODO -->
-    <div id="table-nav-floating" class="
-        py-2 px-4 fixed bottom-2 right-4 flex items-center gap-8
-        bg-white border border-gray-200 rounded-lg z-1000 hidden
-    ">
-        {{ template "events_progress_indicator" .ProgressIndicator }}
-        <a href="{{ .NextUrl }}" class="text-gray-800 link">
-            Next
-        </a>
-    </div>
-
     <div id="table-container" class="w-full px-4 mt-10 overflow-x-auto">
-        <div class="w-fit min-w-full relative">
+        <div class="w-fit min-w-full relative isolate">
             <!-- header -->
             <div id="table-header-placeholder" class="w-full h-10"></div>
             <div id="table-header" class="
@@ -174,8 +177,8 @@
             </div>
 
             <div class="flex flex-col ml-4">
-                <span class="text-gray-800 font-medium">{{ toTitle .Method }}</span>
-                <span class="text-gray-600 text-sm">{{ toTitle .App }}</span>
+                <span class="w-fit text-gray-800 font-medium">{{ toTitle .Method }}</span>
+                <span class="w-fit text-gray-600 text-sm">{{ toTitle .App }}</span>
             </div>
         </div>
 
@@ -379,8 +382,8 @@
 
 {{ define "event_transfers_component" }}
 <div class="w-full flex flex-col gap-y-1">
-	<div class="w-full text-sm h-[1em]">
-		<span class="text-gray-500 font-medium">
+	<div class="w-fit text-sm h-[1em]">
+		<span class="text-left text-gray-500 font-medium">
 			{{ if . }}
                 {{ .Wallet }}
 			{{ end }}
