improved the client side js event handling

--- a/website/html/wallets.html
+++ b/website/html/wallets.html
@@ -1,49 +1,77 @@
-{{ define "wallet_status" }}
-{{ if or (eq .Status 1) (eq .Status 0) }}
-<!-- Queued and in progress-->
-<div class="flex items-center justify-center gap-2" data-status="{{ .Status }}" data-status-wallet-id="{{ .Id }}">
-    <div class="size-4 border-2 border-gray-400 border-b-transparent rounded-full animate-spin">
+{{ define "wallets_page" }}
+<script defer type="module" src="/static/js/wallets.js"></script>
+<div id="loading-spinner"
+     class="absolute inset-0 flex items-center justify-center hidden">
+    <div
+         class="aspect-square animate-spin rounded-full border-2 border-gray-800 border-b-transparent">
     </div>
-    <p class="text-sm">
-        {{ if eq .Status 0 }}
-        Queued
-        {{ else }}
-        Fetching
-        {{ end }}
-    </p>
 </div>
-{{ else if eq .Status 2 }}
-<!-- Done -->
-<svg class="size-8 px-1 text-green-700" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
-    stroke-width="1.5" stroke="currentColor" data-status="{{ .Status }}" data-status-wallet-id="{{ .Id }}">
-    <path stroke-linecap=" round" stroke-linejoin="round"
-        d="M9 12.75 11.25 15 15 9.75M21 12c0 1.268-.63 2.39-1.593 3.068a3.745 3.745 0 0 1-1.043 3.296 3.745 3.745 0 0 1-3.296 1.043A3.745 3.745 0 0 1 12 21c-1.268 0-2.39-.63-3.068-1.593a3.746 3.746 0 0 1-3.296-1.043 3.745 3.745 0 0 1-1.043-3.296A3.745 3.745 0 0 1 3 12c0-1.268.63-2.39 1.593-3.068a3.745 3.745 0 0 1 1.043-3.296 3.746 3.746 0 0 1 3.296-1.043A3.746 3.746 0 0 1 12 3c1.268 0 2.39.63 3.068 1.593a3.746 3.746 0 0 1 3.296 1.043 3.746 3.746 0 0 1 1.043 3.296A3.745 3.745 0 0 1 21 12Z" />
-</svg>
-{{ else if eq .Status 3 }}
-<!-- Error -->
-<p class="text-sm" data-status="{{ .Status }}" data-status-wallet-id="{{ .Id }}">
-    Error
-</p>
-{{ else if or (eq .Status 4) (eq .Status 5) }}
-<!-- Canceled -->
-<p class="text-sm" data-status="{{ .Status }}" data-status-wallet-id="{{ .Id }}">
-    Canceled
-</p>
-{{ end }}
+
+<div class="w-[calc(100%-3rem)] pt-10 pb-20 ml-[3rem] text-gray-800">
+    <div class="max-w-[800px] w-full mx-auto px-4">
+        <header class="w-full">
+            <h1 class="font-semibold text-2xl">Add wallet</h1>
+        </header>
+
+        <form method="POST" action="/wallets"
+              class="w-full mt-8 flex flex-col gap-4">
+            <input type="text" required id="wallet_address"
+                   name="wallet_address" placeholder="Wallet address"
+                   class="w-full h-10 px-4 border border-gray-200 rounded-lg" />
+            <select id="network" name="network" required
+                    class="w-full h-10 px-4 border border-gray-200 rounded-lg">
+                <option value="" selected disabled>Choose a network</option>
+                <option value="0">Solana</option>
+            </select>
+            <button type="submit" data-spinner
+                    class="w-full bg-gray-200 rounded-lg h-10 hover:cursor-pointer hover:bg-gray-300 disabled:text-gray-400 disabled:bg-gray-200 disabled:pointer-events-none">
+                Add
+            </button>
+        </form>
+
+        {{ template "wallets" . }}
+    </div>
+</div>
 {{ end }}
 
+{{ define "wallets" }}
+<div class="2-full mt-10" id="wallets">
+    <div class="flex items-center justify-between">
+        <p class="text-2xl font-semibold">Wallets</p>
+        {{ template "wallets_count" .WalletsCount }}
+    </div>
+    {{ if .Wallets }}
+    <ul class="w-full mt-6 flex flex-col gap-4" id="wallets-table">
+        {{ range .Wallets }}
+        {{ template "wallet" . }}
+        {{ end }}
+    </ul>
+    {{ else }}
+    <p class="text-gray-700 mt-6">Add wallet to see it here.
+    </p>
+    {{ end }}
+</div>
+{{ end }}
+
+{{ define "wallets_count" }}
+<span id="wallets-count">{{ . }}</span>
+{{ end }}
+
+<!-- TODO: group by network -->
 {{ define "wallet" }}
 <li class="w-full border border-gray-200 px-4 py-2 rounded-lg flex items-center justify-between relative isolate"
-    id="wallet-{{ .Id }}" {{ if .Insert }} data-insert="afterbegin" data-parent="wallets-table" {{ end }}
-    data-sse="{{ .SseUrl }}">
+    id="wallet-{{ .Id }}" {{ if .Insert }} data-insert="afterbegin"
+    data-parent="wallets-table" {{ end }} {{ if .ShowSseUrl }}
+    data-sse-subscribe="/jobs?id={{ .JobId }}" {{ end }}>
     <div class=" w-6 h-6 p-0.5 absolute top-0 left-0 -translate-y-1/3 -translate-x-1/3 bg-gray-100 border
-    border-gray-200 rounded-full">
+        border-gray-200 rounded-full">
         <img src="{{ .NetworkImgUrl }}" class="w-full h-full" />
     </div>
 
 
     <div class="flex gap-4 items-center">
-        <a href="https://solscan.io/account/{{ .Address }}" target="_blank" rel="noreferrer" class="link">
+        <a href="https://solscan.io/account/{{ .Address }}" target="_blank"
+           rel="noreferrer" class="link">
             {{ shorten .Address 4 4 }}
         </a>
 
@@ -56,12 +84,13 @@
         <form method="PUT" action="/jobs" class="size-8">
             <input type="text" value="{{ .JobId }}" name="id" class="hidden" />
             <input type="number" value="0" name="status" class="hidden" />
-            <button class="size-8 cursor-pointer border border-gray-200 rounded-lg" data-id="{{ .Id }}"
-                data-type="fetch">
-                <svg class="w-full px-1" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
-                    stroke-width="1.5" stroke="currentColor">
+            <button type="submit" data-spinner="w-4"
+                    class="size-8 cursor-pointer border border-gray-200 rounded-lg disabled:text-gray-400 disabled:pointer-events-none">
+                <svg class="w-full px-1" xmlns="http://www.w3.org/2000/svg"
+                     fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                     stroke="currentColor">
                     <path stroke-linecap="round" stroke-linejoin="round"
-                        d="M3 16.5v2.25A2.25 2.25 0 0 0 5.25 21h13.5A2.25 2.25 0 0 0 21 18.75V16.5M16.5 12 12 16.5m0 0L7.5 12m4.5 4.5V3" />
+                          d="M3 16.5v2.25A2.25 2.25 0 0 0 5.25 21h13.5A2.25 2.25 0 0 0 21 18.75V16.5M16.5 12 12 16.5m0 0L7.5 12m4.5 4.5V3" />
                 </svg>
             </button>
         </form>
@@ -70,23 +99,28 @@
         <form method="PUT" action="/jobs" class="size-8">
             <input type="text" value="{{ .JobId }}" name="id" class="hidden" />
             <input type="number" value="4" name="status" class="hidden" />
-            <button type="submit" class="size-8 cursor-pointer border border-gray-200 rounded-lg" data-id="{{ .Id }}">
-                <svg class="w-full px-1" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
-                    stroke-width="1.5" stroke="currentColor">
-                    <path stroke-linecap="round" stroke-linejoin="round" d="M6 18 18 6M6 6l12 12" />
+            <button type="submit" data-spinner="w-4"
+                    class="size-8 cursor-pointer border border-gray-200 rounded-lg disabled:text-gray-400 disabled:pointer-events-none">
+                <svg class="w-full px-1" xmlns="http://www.w3.org/2000/svg"
+                     fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                     stroke="currentColor">
+                    <path stroke-linecap="round" stroke-linejoin="round"
+                          d="M6 18 18 6M6 6l12 12" />
                 </svg>
             </button>
         </form>
         {{ end }}
 
-        <form method="delete" action="/wallets?id={{ .Id }}" data-delete="wallet-{{ .Id }}" class="size-8">
-            <!-- <input type="text" value="{{ .Id }}" name="id" class="hidden" /> -->
-            <button class="size-8 cursor-pointer border border-red-300 bg-red-300 rounded-lg" data-id="{{ .Id }}"
-                data-type="delete">
-                <svg class="w-full px-1" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
-                    stroke-width="1.5" stroke="currentColor">
+        <form method="delete" action="/wallets?id={{ .Id }}"
+              data-delete-on-success="wallet-{{ .Id }}"
+              data-sse-unsubscribe="/jobs?id={{ .JobId }}" class="size-8">
+            <button type="submit" data-spinner="w-4"
+                    class="size-8 cursor-pointer border border-red-300 bg-red-300 rounded-lg disabled:border-red-100 disabled:text-gray-400 disabled:bg-red-100 disabled:pointer-events-none">
+                <svg class="w-full px-1" xmlns="http://www.w3.org/2000/svg"
+                     fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                     stroke="currentColor">
                     <path stroke-linecap="round" stroke-linejoin="round"
-                        d="m14.74 9-.346 9m-4.788 0L9.26 9m9.968-3.21c.342.052.682.107 1.022.166m-1.022-.165L18.16 19.673a2.25 2.25 0 0 1-2.244 2.077H8.084a2.25 2.25 0 0 1-2.244-2.077L4.772 5.79m14.456 0a48.108 48.108 0 0 0-3.478-.397m-12 .562c.34-.059.68-.114 1.022-.165m0 0a48.11 48.11 0 0 1 3.478-.397m7.5 0v-.916c0-1.18-.91-2.164-2.09-2.201a51.964 51.964 0 0 0-3.32 0c-1.18.037-2.09 1.022-2.09 2.201v.916m7.5 0a48.667 48.667 0 0 0-7.5 0" />
+                          d="m14.74 9-.346 9m-4.788 0L9.26 9m9.968-3.21c.342.052.682.107 1.022.166m-1.022-.165L18.16 19.673a2.25 2.25 0 0 1-2.244 2.077H8.084a2.25 2.25 0 0 1-2.244-2.077L4.772 5.79m14.456 0a48.108 48.108 0 0 0-3.478-.397m-12 .562c.34-.059.68-.114 1.022-.165m0 0a48.11 48.11 0 0 1 3.478-.397m7.5 0v-.916c0-1.18-.91-2.164-2.09-2.201a51.964 51.964 0 0 0-3.32 0c-1.18.037-2.09 1.022-2.09 2.201v.916m7.5 0a48.667 48.667 0 0 0-7.5 0" />
                 </svg>
             </button>
         </form>
@@ -94,42 +128,39 @@
 </li>
 {{ end }}
 
-{{ define "wallets_table" }}
-{{ if . }}
-<ul class="w-full mt-6 flex flex-col gap-4" id="wallets-table">
-    {{ range . }}
-    {{ template "wallet" . }}
-    {{ end }}
-</ul>
-{{ else }}
-<p class="text-gray-700 mt-6" id="wallets-table">Add wallet to see it here.</p>
-{{ end }}
-{{ end }}
-
-{{ define "wallets_page" }}
-<script defer type="module" src="/static/js/wallets.js"></script>
-<div class="w-[calc(100%-3rem)] pt-10 pb-20 ml-[3rem] text-gray-800">
-    <div class="max-w-[800px] w-full mx-auto px-4">
-        <header class="w-full">
-            <h1 class="font-semibold text-2xl">Add wallet</h1>
-        </header>
-
-        <form method="POST" action="/wallets" class="w-full mt-8 flex flex-col gap-4">
-            <input type="text" required id="wallet_address" name="wallet_address" placeholder="Wallet address"
-                class="w-full h-10 px-4 border border-gray-200 rounded-lg" />
-            <select id="network" name="network" required class="w-full, h-10 px-4 border border-gray-200 rounded-lg">
-                <option value="" selected disabled>Choose a network</option>
-                <option value="0">Solana</option>
-            </select>
-            <button type="submit"
-                class="w-full bg-gray-200 rounded-lg h-10 hover:cursor-pointer hover:bg-gray-400">Add</button>
-        </form>
-
-        <!-- Wallets -->
-        <div class="2-full mt-10" id="wallets">
-            <p class="text-2xl font-semibold">Wallets</p>
-            {{ template "wallets_table" . }}
-        </div>
+{{ define "wallet_status" }}
+{{ if eq .Status 0 }}
+<!-- Queued -->
+<div class="flex items-center justify-center gap-2">
+    <div
+         class="size-4 border-2 border-gray-400 border-b-transparent rounded-full animate-spin">
     </div>
+    <p class="text-sm">
+        Queued
+    </p>
 </div>
+{{ else if eq .Status 1 }}
+<!-- in progress -->
+<div class="flex items-center justify-center gap-2">
+    <div
+         class="size-4 border-2 border-gray-400 border-b-transparent rounded-full animate-spin">
+    </div>
+    <p class="text-sm">
+        Fetching
+    </p>
+</div>
+{{ else if eq .Status 2 }}
+<!-- Done -->
+<svg class="size-8 px-1 text-green-700" xmlns="http://www.w3.org/2000/svg"
+     fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
+    <path stroke-linecap=" round" stroke-linejoin="round"
+          d="M9 12.75 11.25 15 15 9.75M21 12c0 1.268-.63 2.39-1.593 3.068a3.745 3.745 0 0 1-1.043 3.296 3.745 3.745 0 0 1-3.296 1.043A3.745 3.745 0 0 1 12 21c-1.268 0-2.39-.63-3.068-1.593a3.746 3.746 0 0 1-3.296-1.043 3.745 3.745 0 0 1-1.043-3.296A3.745 3.745 0 0 1 3 12c0-1.268.63-2.39 1.593-3.068a3.745 3.745 0 0 1 1.043-3.296 3.746 3.746 0 0 1 3.296-1.043A3.746 3.746 0 0 1 12 3c1.268 0 2.39.63 3.068 1.593a3.746 3.746 0 0 1 3.296 1.043 3.746 3.746 0 0 1 1.043 3.296A3.745 3.745 0 0 1 21 12Z" />
+</svg>
+{{ else if eq .Status 3 }}
+<!-- Error -->
+<p class="text-sm">Error</p>
+{{ else if or (eq .Status 4) (eq .Status 5) }}
+<!-- Canceled -->
+<p class="text-sm">Canceled</p>
+{{ end }}
 {{ end }}
