--- a/website/html/wallets.html
+++ b/website/html/wallets.html
@@ -99,7 +99,8 @@
         <form method="PUT" action="/jobs" class="size-8">
             <input type="text" value="{{ .JobId }}" name="id" class="hidden" />
             <input type="number" value="4" name="status" class="hidden" />
-            <button type="submit" data-spinner="w-4"
+            <button type="submit" data-spinner="w-4" {{ if eq .Status 4 }}
+                    disabled {{ end }}
                     class="size-8 cursor-pointer border border-gray-200 rounded-lg disabled:text-gray-400 disabled:pointer-events-none">
                 <svg class="w-full px-1" xmlns="http://www.w3.org/2000/svg"
                      fill="none" viewBox="0 0 24 24" stroke-width="1.5"
