--- a/website/html/wallets.html
+++ b/website/html/wallets.html
@@ -62,7 +62,7 @@
 <li class="w-full border border-gray-200 px-4 py-2 rounded-lg flex items-center justify-between relative isolate"
     id="wallet-{{ .Id }}" {{ if .Insert }} data-insert="afterbegin"
     data-parent="wallets-table" {{ end }} {{ if .ShowSseUrl }}
-    data-sse-subscribe="/jobs?id={{ .JobId }}" {{ end }}>
+    data-sse-subscribe="/wallets/sse?id={{ .Id }}" {{ end }}>
     <div class=" w-6 h-6 p-0.5 absolute top-0 left-0 -translate-y-1/3 -translate-x-1/3 bg-gray-100 border
         border-gray-200 rounded-full">
         <img src="{{ .NetworkImgUrl }}" class="w-full h-full" />
@@ -81,8 +81,8 @@
     <div class="flex items-center gap-2">
         {{ if .ShowFetch }}
         <!-- Fetch button -->
-        <form method="PUT" action="/jobs" class="size-8">
-            <input type="text" value="{{ .JobId }}" name="id" class="hidden" />
+        <form method="PUT" action="/wallets" class="size-8">
+            <input type="text" value="{{ .Id }}" name="id" class="hidden" />
             <input type="number" value="0" name="status" class="hidden" />
             <button type="submit" data-spinner="w-4"
                     class="size-8 cursor-pointer border border-gray-200 rounded-lg disabled:text-gray-400 disabled:pointer-events-none">
@@ -96,9 +96,9 @@
         </form>
         {{ else }}
         <!-- Cancel button -->
-        <form method="PUT" action="/jobs" class="size-8">
-            <input type="text" value="{{ .JobId }}" name="id" class="hidden" />
-            <input type="number" value="4" name="status" class="hidden" />
+        <form method="PUT" action="/wallets" class="size-8">
+            <input type="text" value="{{ .Id }}" name="id" class="hidden" />
+            <input type="number" value="5" name="status" class="hidden" />
             <button type="submit" data-spinner="w-4" {{ if eq .Status 4 }}
                     disabled {{ end }}
                     class="size-8 cursor-pointer border border-gray-200 rounded-lg disabled:text-gray-400 disabled:pointer-events-none">
@@ -114,7 +114,7 @@
 
         <form method="delete" action="/wallets?id={{ .Id }}"
               data-delete-on-success="wallet-{{ .Id }}"
-              data-sse-unsubscribe="/jobs?id={{ .JobId }}" class="size-8">
+              data-sse-unsubscribe="/wallets/sse?id={{ .Id }}" class="size-8">
             <button type="submit" data-spinner="w-4"
                     class="size-8 cursor-pointer border border-red-300 bg-red-300 rounded-lg disabled:border-red-100 disabled:text-gray-400 disabled:bg-red-100 disabled:pointer-events-none">
                 <svg class="w-full px-1" xmlns="http://www.w3.org/2000/svg"
