evm fetch should work

--- a/website/html/wallets.html
+++ b/website/html/wallets.html
@@ -22,6 +22,7 @@
                     class="w-full h-10 px-4 border border-gray-200 rounded-lg">
                 <option value="" selected disabled>Choose a network</option>
                 <option value="0">Solana</option>
+                <option value="3">Arbitrum</option>
             </select>
             <button type="submit" data-spinner
                     class="w-full bg-gray-200 rounded-lg h-10 hover:cursor-pointer hover:bg-gray-300 disabled:text-gray-400 disabled:bg-gray-200 disabled:pointer-events-none">
