--- a/website/html/wallets.html
+++ b/website/html/wallets.html
@@ -7,7 +7,7 @@
     </div>
 </div>
 
-<div class="w-[calc(100%-3rem)] pt-10 pb-20 ml-[3rem] text-gray-800">
+<div class="w-full pt-10 pb-20 text-gray-800">
     <div class="max-w-[800px] w-full mx-auto px-4">
         <header class="w-full">
             <h1 class="font-semibold text-2xl">Add wallet</h1>
@@ -60,7 +60,7 @@
 
 <!-- TODO: group by network -->
 {{ define "wallet" }}
-<li class="w-full border border-gray-200 px-4 py-2 rounded-lg flex items-center justify-between relative isolate"
+<li class="w-full border border-gray-200 rounded-lg relative isolate"
     id="wallet-{{ .Id }}" {{ if .Insert }} data-insert="afterbegin"
     data-parent="wallets-table" {{ end }} {{ if .ShowSseUrl }}
     data-sse-subscribe="/wallets/sse?id={{ .Id }}" {{ end }}>
@@ -69,100 +69,140 @@
         <img src="{{ .NetworkImgUrl }}" class="w-full h-full" />
     </div>
 
+    <div class="w-full">
+        <div class="flex items-start justify-between p-2">
+            <div>
+                <div class="flex items-center gap-2">
+                    {{ template "wallet_status" . }}
+                    <span class="font-semibold">{{ .Label }}</span>
+                </div>
+                <a href="{{ .AccountUrl }}" target="_blank"
+                   class="link text-sm text-gray-700">{{ shorten .Address 6 4 }}</a>
+            </div>
 
-    <div class="flex gap-4 items-center">
-        <a href="https://solscan.io/account/{{ .Address }}" target="_blank"
-           rel="noreferrer" class="link">
-            {{ shorten .Address 4 4 }}
-        </a>
+            <div class="flex gap-2">
+                {{ if or (eq .Status "queued") (eq .Status "in_progress") }}
+                <form class="size-8" method="PUT" action="/wallets">
+                    <input class="hidden" type="text" value="{{ .Id }}"
+                           name="id" />
+                    <input class="hidden" type="text" value="5" name="status" />
+                    <button class="size-8 rounded-lg hover:bg-gray-200"
+                            data-spinner="w-4">
+                        <svg class="p-1.5" xmlns="http://www.w3.org/2000/svg"
+                             fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                             stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round"
+                                  d="M6 18 18 6M6 6l12 12" />
+                        </svg>
+                    </button>
+                </form>
+                {{ else }}
+                <form class="size-8" method="PUT" action="/wallets">
+                    <input class="hidden" type="text" value="{{ .Id }}"
+                           name="id" />
+                    <input class="hidden" type="text" value="0" name="status" />
+                    <button class="size-8 rounded-lg hover:bg-gray-200"
+                            data-spinner="w-4">
+                        <svg class="p-1.5" xmlns="http://www.w3.org/2000/svg"
+                             fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                             stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round"
+                                  d="M3 16.5v2.25A2.25 2.25 0 0 0 5.25 21h13.5A2.25 2.25 0 0 0 21 18.75V16.5M16.5 12 12 16.5m0 0L7.5 12m4.5 4.5V3" />
+                        </svg>
+                    </button>
+                </form>
+                {{ end }}
+                <form class="size-8" method="delete"
+                      action="/wallets?id={{ .Id }}"
+                      data-sse-unsubscribe="/wallets/sse?id={{ .Id }}"
+                      data-delete-on-success="wallet-{{ .Id }}">
+                    <button class="size-8 text-red-600 rounded-lg hover:bg-gray-200"
+                            data-spinner="w-4">
+                        <svg class="p-1.5" xmlns="http://www.w3.org/2000/svg"
+                             fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                             stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round"
+                                  d="m14.74 9-.346 9m-4.788 0L9.26 9m9.968-3.21c.342.052.682.107 1.022.166m-1.022-.165L18.16 19.673a2.25 2.25 0 0 1-2.244 2.077H8.084a2.25 2.25 0 0 1-2.244-2.077L4.772 5.79m14.456 0a48.108 48.108 0 0 0-3.478-.397m-12 .562c.34-.059.68-.114 1.022-.165m0 0a48.11 48.11 0 0 1 3.478-.397m7.5 0v-.916c0-1.18-.91-2.164-2.09-2.201a51.964 51.964 0 0 0-3.32 0c-1.18.037-2.09 1.022-2.09 2.201v.916m7.5 0a48.667 48.667 0 0 0-7.5 0" />
+                        </svg>
+                    </button>
+                </form>
+                <button class="size-8 rounded-lg hover:bg-gray-200 min-[470px]:hidden"
+                        data-wallet-table-expand="{{ .Id }}">
+                    <svg class="p-1.5" xmlns="http://www.w3.org/2000/svg"
+                         fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                         stroke="currentColor">
+                        <path stroke-linecap="round" stroke-linejoin="round"
+                              d="m19.5 8.25-7.5 7.5-7.5-7.5" />
+                    </svg>
+                </button>
+            </div>
+        </div>
 
-        {{ template "wallet_status" . }}
-    </div>
+        <table class="hidden min-[470px]:hidden p-2 border-t border-gray-200 flex flex-col gap-2 text-sm text-gray-700"
+               data-wallet-table="{{ .Id }}">
+            <tbody>
+                <tr class="flex items-center justify-between">
+                    <td>Transactions</td>
+                    <td class="font-medium text-right">{{ .TxCount }}</td>
+                </tr>
+                <tr class="flex items-center justify-between">
+                    <td>Last sync at</td>
+                    <td class="font-medium text-right">{{ .LastSyncAt }}</td>
+                </tr>
+                <tr class="flex items-center justify-between">
+                    <td>Imported at</td>
+                    <td class="font-medium text-right">{{ .ImportedAt }}</td>
+                </tr>
+            </tbody>
+        </table>
 
-    <div class="flex items-center gap-2">
-        {{ if .ShowFetch }}
-        <!-- Fetch button -->
-        <form method="PUT" action="/wallets" class="size-8">
-            <input type="text" value="{{ .Id }}" name="id" class="hidden" />
-            <input type="number" value="0" name="status" class="hidden" />
-            <button type="submit" data-spinner="w-4"
-                    class="size-8 cursor-pointer border border-gray-200 rounded-lg disabled:text-gray-400 disabled:pointer-events-none">
-                <svg class="w-full px-1" xmlns="http://www.w3.org/2000/svg"
-                     fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-                     stroke="currentColor">
-                    <path stroke-linecap="round" stroke-linejoin="round"
-                          d="M3 16.5v2.25A2.25 2.25 0 0 0 5.25 21h13.5A2.25 2.25 0 0 0 21 18.75V16.5M16.5 12 12 16.5m0 0L7.5 12m4.5 4.5V3" />
-                </svg>
-            </button>
-        </form>
-        {{ else }}
-        <!-- Cancel button -->
-        <form method="PUT" action="/wallets" class="size-8">
-            <input type="text" value="{{ .Id }}" name="id" class="hidden" />
-            <input type="number" value="5" name="status" class="hidden" />
-            <button type="submit" data-spinner="w-4" {{ if eq .Status 4 }}
-                    disabled {{ end }}
-                    class="size-8 cursor-pointer border border-gray-200 rounded-lg disabled:text-gray-400 disabled:pointer-events-none">
-                <svg class="w-full px-1" xmlns="http://www.w3.org/2000/svg"
-                     fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-                     stroke="currentColor">
-                    <path stroke-linecap="round" stroke-linejoin="round"
-                          d="M6 18 18 6M6 6l12 12" />
-                </svg>
-            </button>
-        </form>
-        {{ end }}
+        <div
+             class="px-2 pb-2 hidden min-[470px]:flex items-start justify-between text-sm">
+            <span>
+                <span class="font-medium">{{ .TxCount }}</span>
+                transactions
+            </span>
 
-        <form method="delete" action="/wallets?id={{ .Id }}"
-              data-delete-on-success="wallet-{{ .Id }}"
-              data-sse-unsubscribe="/wallets/sse?id={{ .Id }}" class="size-8">
-            <button type="submit" data-spinner="w-4"
-                    class="size-8 cursor-pointer border border-red-300 bg-red-300 rounded-lg disabled:border-red-100 disabled:text-gray-400 disabled:bg-red-100 disabled:pointer-events-none">
-                <svg class="w-full px-1" xmlns="http://www.w3.org/2000/svg"
-                     fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-                     stroke="currentColor">
-                    <path stroke-linecap="round" stroke-linejoin="round"
-                          d="m14.74 9-.346 9m-4.788 0L9.26 9m9.968-3.21c.342.052.682.107 1.022.166m-1.022-.165L18.16 19.673a2.25 2.25 0 0 1-2.244 2.077H8.084a2.25 2.25 0 0 1-2.244-2.077L4.772 5.79m14.456 0a48.108 48.108 0 0 0-3.478-.397m-12 .562c.34-.059.68-.114 1.022-.165m0 0a48.11 48.11 0 0 1 3.478-.397m7.5 0v-.916c0-1.18-.91-2.164-2.09-2.201a51.964 51.964 0 0 0-3.32 0c-1.18.037-2.09 1.022-2.09 2.201v.916m7.5 0a48.667 48.667 0 0 0-7.5 0" />
-                </svg>
-            </button>
-        </form>
+            <div class="flex flex-col sm:flex-row sm:gap-2 tex-right">
+                <span>
+                    Last sync at
+                    <span class="font-medium">{{ .LastSyncAt }}</span>
+                </span>
+                <span class="hidden sm:inline">&middot;</span>
+                <span>
+                    Imported at
+                    <span class="font-medium">{{ .ImportedAt }}</span>
+                </span>
+            </div>
+        </div>
     </div>
 </li>
 {{ end }}
 
 {{ define "wallet_status" }}
-{{ if eq .Status 0 }}
-<!-- Queued -->
-<div class="flex items-center justify-center gap-2">
+<div class="size-4 flex items-center justify-center text-gray-600">
+    {{ if or (eq .Status "queued") (eq .Status "in_progress") }}
     <div
-         class="size-4 border-2 border-gray-400 border-b-transparent rounded-full animate-spin">
+         class="size-3 border-2 border-gray-400 border-b-transparent rounded-full animate-spin">
     </div>
-    <p class="text-sm">
-        Queued
-    </p>
+    {{ else if eq .Status "success" }}
+    <svg class="size-4" xmlns="http://www.w3.org/2000/svg" fill="none"
+         viewBox="0 0 24 24" stroke-width="2" stroke="currentColor">
+        <path stroke-linecap="round" stroke-linejoin="round"
+              d="M9 12.75 11.25 15 15 9.75M21 12c0 1.268-.63 2.39-1.593 3.068a3.745 3.745 0 0 1-1.043 3.296 3.745 3.745 0 0 1-3.296 1.043A3.745 3.745 0 0 1 12 21c-1.268 0-2.39-.63-3.068-1.593a3.746 3.746 0 0 1-3.296-1.043 3.745 3.745 0 0 1-1.043-3.296A3.745 3.745 0 0 1 3 12c0-1.268.63-2.39 1.593-3.068a3.745 3.745 0 0 1 1.043-3.296 3.746 3.746 0 0 1 3.296-1.043A3.746 3.746 0 0 1 12 3c1.268 0 2.39.63 3.068 1.593a3.746 3.746 0 0 1 3.296 1.043 3.746 3.746 0 0 1 1.043 3.296A3.745 3.745 0 0 1 21 12Z" />
+    </svg>
+    {{ else if eq .Status "error" }}
+    <svg class="size-4" xmlns="http://www.w3.org/2000/svg" fill="none"
+         viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
+        <path stroke-linecap="round" stroke-linejoin="round"
+              d="M12 9v3.75m9-.75a9 9 0 1 1-18 0 9 9 0 0 1 18 0Zm-9 3.75h.008v.008H12v-.008Z" />
+    </svg>
+    {{ else if or (eq .Status "cancel_scheduled") (eq .Status "canceled") }}
+    <svg class="size-4" xmlns="http://www.w3.org/2000/svg" fill="none"
+         viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
+        <path stroke-linecap="round" stroke-linejoin="round"
+              d="m9.75 9.75 4.5 4.5m0-4.5-4.5 4.5M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z" />
+    </svg>
+    {{ end }}
 </div>
-{{ else if eq .Status 1 }}
-<!-- in progress -->
-<div class="flex items-center justify-center gap-2">
-    <div
-         class="size-4 border-2 border-gray-400 border-b-transparent rounded-full animate-spin">
-    </div>
-    <p class="text-sm">
-        Fetching
-    </p>
-</div>
-{{ else if eq .Status 2 }}
-<!-- Done -->
-<svg class="size-8 px-1 text-green-700" xmlns="http://www.w3.org/2000/svg"
-     fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
-    <path stroke-linecap=" round" stroke-linejoin="round"
-          d="M9 12.75 11.25 15 15 9.75M21 12c0 1.268-.63 2.39-1.593 3.068a3.745 3.745 0 0 1-1.043 3.296 3.745 3.745 0 0 1-3.296 1.043A3.745 3.745 0 0 1 12 21c-1.268 0-2.39-.63-3.068-1.593a3.746 3.746 0 0 1-3.296-1.043 3.745 3.745 0 0 1-1.043-3.296A3.745 3.745 0 0 1 3 12c0-1.268.63-2.39 1.593-3.068a3.745 3.745 0 0 1 1.043-3.296 3.746 3.746 0 0 1 3.296-1.043A3.746 3.746 0 0 1 12 3c1.268 0 2.39.63 3.068 1.593a3.746 3.746 0 0 1 3.296 1.043 3.746 3.746 0 0 1 1.043 3.296A3.745 3.745 0 0 1 21 12Z" />
-</svg>
-{{ else if eq .Status 3 }}
-<!-- Error -->
-<p class="text-sm">Error</p>
-{{ else if or (eq .Status 4) (eq .Status 5) }}
-<!-- Canceled -->
-<p class="text-sm">Canceled</p>
-{{ end }}
 {{ end }}
