--- a/website/html/global.html
+++ b/website/html/global.html
@@ -79,7 +79,51 @@
     <meta charset="UTF-8">
 </head>
 
-<body class="min-h-screen w-full relative bg-gray-50">
+<body class="min-h-screen w-full relative bg-gray-50 text-gray-800">
+    <header
+            class="sticky top-0 w-full px-4 h-12 bg-inherit border-b border-gray-200 flex items-center justify-between z-10">
+        <button id="nav-btn"
+                class="flex items-center gap-2 rounded-lg bg-gray-50 hover:bg-gray-200">
+            <svg class="size-8 p-1.5" xmlns="http://www.w3.org/2000/svg"
+                 fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                 stroke="currentColor" class="size-6">
+                <path stroke-linecap="round" stroke-linejoin="round"
+                      d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
+            </svg>
+            <!-- <span class="hidden sm:inline"> -->
+            <!--     Expand navigation -->
+            <!-- </span> -->
+        </button>
+        <h1 class="sm:hidden">Taxee</h1>
+    </header>
+
+    <nav id="nav"
+         class="hidden w-[300px] fixed top-12 bottom-0 left-0 bg-inherit border-r border-gray-200 z-10">
+        <ul class="px-4 py-4 flex flex-col gap-2">
+            <li>
+                <a href="/wallets">Wallets</a>
+            </li>
+            <li>
+                <a href="/events">Events</a>
+            </li>
+            <li class="w-full border-b border-gray-200"></li>
+            <li>
+                <button>Parse transactions</button>
+            </li>
+            <li>
+                <button>Parse events</button>
+            </li>
+        </ul>
+    </nav>
+
+    <script>
+        const navBtn = document.querySelector("#nav-btn");
+        const nav = document.querySelector("#nav");
+        navBtn.addEventListener("click", function () {
+            nav.classList.toggle("hidden");
+        })
+    </script>
+
     <!-- {{ template "dashboard_sidebar" }} -->
     {{ .Content }}
 </body>
